Pad searchbar to avoid pagetoc overlap

--- a/theme/pagetoc.css
+++ b/theme/pagetoc.css
@@ -56,6 +56,9 @@
         .content main {
             padding-right: min(320px, 26vw);
         }
+        .searchbar-outer {
+            padding-right: min(320px, 26vw);
+        }
     }
     #pagetoc a {
         border-left: 1px solid var(--sidebar-bg);
